--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-fhir.example.json
+ig = fsh-generated/resources/ImplementationGuide-tracker.tb.case.surveillance.ig.json
 template = #local-template
