--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -13,7 +13,7 @@ version: 0.1.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2024+
 releaseLabel: ci-build
-license: https://creativecommons.org/licenses/by/4.0/
+license: BSD-3-Clause
 # jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
 publisher:
   name: DHIS2
