chore: update template

--- a/local-template/package/package.json
+++ b/local-template/package/package.json
@@ -4,7 +4,7 @@
     "type": "fhir.template",
     "license": "CC0-1.0",
     "description": "Local template extension for FHIR IG",
-    "author" : "DHIS2",
+    "author" : "http://who.int",
     "base" : "who.template.root",
     "dependencies" : {
       "who.template.root" : "current"
