--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,4 +44,5 @@ jobs:
           preview-branch: pr-preview
           deploy-repo: ${{ github.repository }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          clean: true
         
