--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -7,13 +7,14 @@ id: tracker.tb.case.surveillance.ig
 canonical: http://example.org
 name: Tracker TB Case Surveillance Implementation Guide
 title: Tracker TB Case Surveillance Implementation Guide
-# description: Example Implementation Guide for getting started with SUSHI
+description: Reference IG for Tracker TB Case Surveillance.
 status: draft # draft | active | retired | unknown
 version: 0.1.0
 fhirVersion: 4.0.1 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2024+
-releaseLabel: ci-build
+releaseLabel: draft
 license: CC-BY-SA-3.0
+experimental: true
 # jurisdiction: urn:iso:std:iso:3166#US "United States of America" # https://www.hl7.org/fhir/valueset-jurisdiction.html
 dependencies:
   hl7.terminology: 5.5.0
